items is aligned correctly ...

--- a/components/socmedias/socmedias.module.css
+++ b/components/socmedias/socmedias.module.css
@@ -2,6 +2,11 @@
   display: flex;
   align-items: center;
 
+  & > * {
+    display: flex;
+    align-items: center;
+  }
+
   & > div {
     display: flex;
   }
@@ -10,6 +15,8 @@
 .burger {
   width: 60px;
   height: 60px;
+  align-items: center;
+  display: flex;
 }
 
 @media (--m) {
